--- a/.env
+++ b/.env
@@ -1,17 +1,15 @@
-# 镜像版本设置
+[tag]
 NGINX=nginx:1.21.6
 MYSQL=mysql:8.0.28
 REDIS=redis:6.2.6
-PHP_MASTER=xgbnl/php-master
+PHP_MASTER=xgbnl/php:8.1.3-fpm
 PHP_SUB=xgbnl/php-sub
 
-# 数据库基础配置
-MYSQL_ROOT_PASSWORD=root_pwd
+[mysql]
+MYSQL_ROOT_PASSWORD=root_password
 MYSQL_DATABASE=laravel
 MYSQL_USER=guest
 MYSQL_PASSWORD=bcrypt
-
-# 数据库字符集配置
 DEFAULT_AUTHENTICATION_PLUGIN=mysql_native_password
 CHARACTER_SET_SERVER=utf8mb4
 COLLATION_SERVER=utf8mb4_general_ci
@@ -19,16 +17,16 @@ EXPLICIT_DEFAULTS_FOR_TIMESTAMP=off
 DEFAULT_STORAGE_ENGINE=INNODB
 SQL_MODE=
 
-# 数据库存储位置
+[database store]
 MYSQL_DATA_STORE=./database/mysql
 REDIS_DATA_STORE=./database/redis
 
-# 站点目录
+[work path]
 WEB_DIR=./www
 CONTAINER_DIR=/var/www/html
 
-# nginx 配置目录
+[nginx]
 NGINX_CONFIG_DIR=./config/nginx
 
-# 时区
+[timezone]
 TZ=Asia/Shanghai
