--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 NGINX=nginx:1.21.6
 MYSQL=mysql:8.0.28
 REDIS=redis:6.2.6
-PHP_MASTER=xgbnl/php:8.1.3-fpm
+PHP_MASTER=xgbnl/php:8.1.3
 PHP_SUB=xgbnl/php-sub
 
 [mysql]
