--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
-[tag]
+TZ=Asia/Shanghai
+
+# [image]
 NGINX=nginx:1.21.6
 MYSQL=mysql:8.0.28
 REDIS=redis:6.2.6
-PHP_MASTER=xgbnl/php:8.1.3
 PHP_SUB=xgbnl/php-sub
+PHP_MASTER=xgbnl/php:8.1.3
 
-[mysql]
+# [mysql]
 MYSQL_ROOT_PASSWORD=root_password
 MYSQL_DATABASE=laravel
 MYSQL_USER=guest
@@ -16,17 +18,19 @@ COLLATION_SERVER=utf8mb4_general_ci
 EXPLICIT_DEFAULTS_FOR_TIMESTAMP=off
 DEFAULT_STORAGE_ENGINE=INNODB
 SQL_MODE=
-
-[database store]
 MYSQL_DATA_STORE=./database/mysql
+
+# [redis]
 REDIS_DATA_STORE=./database/redis
 
-[work path]
-WEB_DIR=./www
-CONTAINER_DIR=/var/www/html
+# [path]
+WORK_PATH=./www
+CONTAINER_WORK_PATH=/var/www
 
-[nginx]
+# [nginx]
 NGINX_CONFIG_DIR=./config/nginx
 
-[timezone]
-TZ=Asia/Shanghai
+# [log path]
+XDEBUG_LOG=./logs/xdebug
+MYSQL_LOG=./logs/mysql
+NGINX_LOG=./logs/nginx
