--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 TZ=Asia/Shanghai
 
 # [image]
-NGINX=nginx:1.21.6
+NGINX=nginx:1.21.6-alpine
 MYSQL=mysql:8.0.28
-REDIS=redis:6.2.6
+REDIS=redis:6.2.6-alpine
 PHP_SUB=xgbnl/php-sub
 PHP_MASTER=xgbnl/php:8.1.3
 
@@ -30,7 +30,8 @@ CONTAINER_WORK_PATH=/var/www/html
 # [nginx]
 NGINX_CONFIG_DIR=./config/nginx
 
-# [log path]
-XDEBUG_LOG=./logs/xdebug
-MYSQL_LOG=./logs/mysql
-NGINX_LOG=./logs/nginx
+# [redis config]
+REDIS_CONFIG_DIR=./config/redis/redis.conf
+
+# 指定redis日志文件
+REDIS_LOG_FILE=./database/redis/redis.log
