--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ TZ=Asia/Shanghai
 # [image]
 NGINX=nginx:1.21.6-alpine
 MYSQL=mysql:8.0.28
-REDIS=redis:6.2.6-alpine
+REDIS=redis:7.0.0-alpine
 PHP_SUB=xgbnl/php-sub
-PHP_MASTER=xgbnl/php:8.1.3
+PHP_MASTER=xgbnl/php:8.1.5-fpm
 
 # [mysql]
 MYSQL_ROOT_PASSWORD=root_password
