--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     container_name: php
     volumes:
       - ${WORK_PATH}:${CONTAINER_WORK_PATH}:rw
-    user: 1000:1000
+    user: ${UID}:${GID}
     ports:
       - "9000:9000"
       - "9501:9501"
