--- a/.env
+++ b/.env
@@ -36,5 +36,5 @@ REDIS_CONFIG_DIR=./config/redis/redis.conf
 REDIS_LOG_FILE=./database/redis/redis.log
 
 # user
-UID=df
-GID=df
+UID=1000
+GID=1000
