fix: 修复group by错误问题,更新容器镜像

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 TZ=Asia/Shanghai
 
 # [image]
-NGINX=nginx:1.21.6-alpine
-MYSQL=mysql:8.0.28
-REDIS=redis:7.0.0-alpine
-PHP=xgbnl/php:8.1.7-fpm
+NGINX=nginx:1.23.1-alpine
+MYSQL=mysql:8.0.30
+REDIS=redis:7.0.4-alpine
+PHP=xgbnl/php:8.1.8-fpm
 
 # [mysql]
 MYSQL_ROOT_PASSWORD=root_password
@@ -16,8 +16,8 @@ CHARACTER_SET_SERVER=utf8mb4
 COLLATION_SERVER=utf8mb4_general_ci
 EXPLICIT_DEFAULTS_FOR_TIMESTAMP=off
 DEFAULT_STORAGE_ENGINE=INNODB
-SQL_MODE=
 MYSQL_DATA_STORE=./database/mysql
+SQL_MODE='STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION'
 
 # [redis]
 REDIS_DATA_STORE=./database/redis
