feat: multiple分支实现mysql主从复制功能

--- a/.env
+++ b/.env
@@ -1,37 +1,75 @@
 TZ=Asia/Shanghai
 
-# [image]
+# [镜像]
 NGINX=nginx:1.23.2-alpine
 MYSQL=mysql:8.0.31
 REDIS=redis:7.0.5-alpine
 PHP=xgbnl/php:8.1.12-fpm
 
-# [mysql]
-MYSQL_ROOT_PASSWORD=root_password
-MYSQL_DATABASE=laravel
-MYSQL_USER=guest
-MYSQL_PASSWORD=bcrypt
+# [Mysql主服务器]
+MYSQL_MASTER_ROOT_USER=root
+MYSQL_MASTER_ROOT_PASSWORD=root_password
+MYSQL_MASTER_DATABASE=laravel
+MYSQL_MASTER_USER=guest
+MYSQL_MASTER_PASSWORD=bcrypt
+MYSQL_MASTER_LOCAL_STORE=./database/mysql/master
+MYSQL_MASTER_LOCAL_CONFIG_VOLUME=./config/mysql/master
+#允许同步帐号的host地址
+MYSQL_MASTER_ALLOW_HOST=10.10.10.%
+MYSQL_MASTER_SHELL=./bootstrap/mysql/master
+MYSQL_MASTER_SERVER_ID=1
+MYSQL_MASTER_LOG_BIN=mysql-bin
+MYSQL_SYNC_BINLOG=1
+MYSQL_BINLOG_FORMAT=statement
+#需要同步的数据库：空为同步所有
+MYSQL_BINLOG_DO_DB=laravel
+
+# [Mysql从服务器]
+MYSQL_SLAVE_ROOT_USER=root
+MYSQL_SLAVE_ROOT_PASSWORD=root_password
+MYSQL_SLAVE_DATABASE=laravel
+MYSQL_SLAVE_USER=guest
+MYSQL_SLAVE_PASSWORD=bcrypt
+MYSQL_SLAVE_LOCAL_STORE=./database/mysql/slave
+MYSQL_SLAVE_LOCAL_CONFIG_VOLUME=./config/mysql/slave
+MYSQL_SLAVE_SHELL=./bootstrap/mysql/slave
+MYSQL_SLAVE_SERVER_ID=2
+MYSQL_SLAVE_LOG_BIN=mysql-slave_bin
+MYSQL_RELAY_LOG=mysql-relay-bin
+MYSQL_READ_ONLY=1
+
+# [同步账户]
+MYSQL_SYNC_USER=sync_guest
+MYSQL_SYNC_PASSWORD=123456
+MYSQL_MASTER_HOST=10.10.10.11
+
+# [Docker 初始化脚本]
+DOCKER_ENTRYPOINT=/docker-entrypoint-initdb.d
+
+#[配置]
+DOCKER_MYSQL_CONFIG_VOLUME=/etc/mysql
+DOCKER_LIB_VOLUME=/var/lib/mysql:rw
 DEFAULT_AUTHENTICATION_PLUGIN=mysql_native_password
 CHARACTER_SET_SERVER=utf8mb4
 COLLATION_SERVER=utf8mb4_general_ci
 EXPLICIT_DEFAULTS_FOR_TIMESTAMP=off
 DEFAULT_STORAGE_ENGINE=INNODB
-MYSQL_DATA_STORE=./database/mysql
 SQL_MODE='STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION'
+INIT_CONNECT='SET NAMES utf8mb4'
+LOWER_CASE_TABLE_NAMES=1
 
-# [redis]
-REDIS_DATA_STORE=./database/redis
+# [Redis]
+REDIS_LOCAL_DATABASE=./database/redis
+REDIS_LOCAL_LOG=./database/redis/redis.log
+REDIS_LOCAL_CONFIG=./config/redis/redis.conf
+REDIS_DOCKER_DATABASE=/data
+REDIS_DOCKER_LOG=/var/log/redis.log:rw
+REDIS_DOCKER_CONFIG=/usr/local/etc/redis/redis.conf:rw
 
-# [path]
-WORK_PATH=./www
-CONTAINER_WORK_PATH=/var/www/html
+# [project path]
+ROOT=./www
+DOCKER_ROOT=/var/www/html
 
 # [nginx]
-NGINX_CONFIG_DIR=./config/nginx
-
-# [redis config]
-REDIS_CONFIG_DIR=./config/redis/redis.conf
-
-# 指定redis日志文件
-REDIS_LOG_FILE=./database/redis/redis.log
+NGINX_CONFIG=./config/nginx
 
