feat: 开启nginx443端口，建立ssl目录

--- a/config/nginx/laravel.conf
+++ b/config/nginx/laravel.conf
@@ -1,11 +1,25 @@
 server {
     listen 80;
-    server_name laravel.test;
+    listen 443 ssl; #云服务器请开始443端口
+    #替换
+    server_name www.your_website.com;
     root /var/www/html/laravel/public;
+
+    #配置SSL证书，替换
+    #ssl_certificate  conf.d/cert/your_cert_file.pem;
+    #ssl_certificate_key conf.d/cert/your_cert_file.key;
+    #ssl_session_timeout 5m;
+    #ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
+
+    #表示使用的加密套件的类型。
+    #表示使用的TLS协议的类型，您需要自行评估是否配置TLSv1.1协议。
+    #ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3; 
+    #ssl_prefer_server_ciphers on;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
+
 
     index index.html index.htm index.php;
 
