chore: 重构目录结构，并重新对php上传限制进行了配置。说明文档新增对react项目的布署描述

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ TZ=Asia/Shanghai
 
 # [image]
 NGINX=nginx:1.23.3-alpine
-MYSQL=mysql:8.0.31
-REDIS=redis:7.0.7-alpine
+MYSQL=mysql:8.0.32
+REDIS=redis:7.0.9-alpine
 PHP=xgbnl/php:8.2.3-fpm
 
 # [mysql]
@@ -16,22 +16,20 @@ CHARACTER_SET_SERVER=utf8mb4
 COLLATION_SERVER=utf8mb4_general_ci
 EXPLICIT_DEFAULTS_FOR_TIMESTAMP=off
 DEFAULT_STORAGE_ENGINE=INNODB
-MYSQL_DATA_STORE=./database/mysql
 SQL_MODE='STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION'
 
-# [redis]
-REDIS_DATA_STORE=./database/redis
 
 # [path]
-WORK_PATH=./www
-CONTAINER_WORK_PATH=/var/www/html
+APP=./app
+CONTAINER=/var/www/html
 
-# [nginx]
-NGINX_CONFIG_DIR=./config/nginx
+#[config]
+CONFIG=./config
 
-# [redis config]
-REDIS_CONFIG_DIR=./config/redis/redis.conf
+#[database]
+DATABASE=./database
 
-# 指定redis日志文件
-REDIS_LOG_FILE=./database/redis/redis.log
+#[logs]
+LOGS=./storage/logs
+
 
