--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     environment:
       - TZ=${TZ}
     volumes:
-      - ${WORK_PATH}:${CONTAINER_WORK_PATH}:rw
-      - ${NGINX_CONFIG_DIR}:/etc/nginx/conf.d:ro
+      - ${APP}:${CONTAINER}:rw
+      - ${CONFIG}/nginx:/etc/nginx/conf.d:ro
     networks:
       - dnmp
 
@@ -21,7 +21,8 @@ services:
     restart: unless-stopped
     container_name: php
     volumes:
-      - ${WORK_PATH}:${CONTAINER_WORK_PATH}:rw
+      - ${APP}:${CONTAINER}:rw
+      - ${CONFIG}/php/docker-upload.ini:/usr/local/etc/php/conf.d/docker-upload.ini:ro
     ports:
       - "9000:9000"
       - "9501:9501"
@@ -46,7 +47,7 @@ services:
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - TZ=${TZ}
     volumes:
-      - ${MYSQL_DATA_STORE}:/var/lib/mysql:rw
+      - ${DATABASE}/mysql:/var/lib/mysql:rw
     command:
       --default-authentication-plugin=${DEFAULT_AUTHENTICATION_PLUGIN}
       --character-set-server=${CHARACTER_SET_SERVER}
@@ -67,9 +68,9 @@ services:
     environment:
       - TZ=${TZ}
     volumes:
-      - ${REDIS_CONFIG_DIR}:/usr/local/etc/redis/redis.conf:rw
-      - ${REDIS_DATA_STORE}:/data
-      - ${REDIS_LOG_FILE}:/var/log/redis.log:rw
+      - ${CONFIG}/redis:/usr/local/etc/redis/redis.conf:rw
+      - ${DATABASE}/redis:/data
+      - ${LOGS}/redis/redis.log:/var/log/redis.log:rw
     networks:
       - dnmp
 
