fix: 修复redis 'Can't open the log file: Permission denied' 错误

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
     volumes:
       - ${CONFIG}/redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
       - ${DATABASE}/redis:/data:rw
-      - ${LOGS}/redis/redis.log:/var/log/redis.log:rw
+      - ${STORAGE}/logs/redis/redis.log:/var/log/redis.log:rw
     networks:
       - web
 
