feat: php容器新增普通用户，并可在编译时替换uid，修复了普通用户调用php-fpm的错误

--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,9 @@ EXPLICIT_DEFAULTS_FOR_TIMESTAMP=off
 DEFAULT_STORAGE_ENGINE=INNODB
 SQL_MODE='STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION'
 
+
 # [path]
-APP=./www
+APP=./app
 CONTAINER=/var/www/html
 
 #[config]
@@ -28,5 +29,9 @@ CONFIG=./config
 #[database]
 DATABASE=./database
 
-#[logs]
-LOGS=./storage/logs
+#[storage]
+STORAGE=./storage 
+
+#[permission]
+UID=1000
+GID=1000
