feat: nginx新增对分片上传大小的限制功能

--- a/config/nginx/laravel.conf
+++ b/config/nginx/laravel.conf
@@ -20,6 +20,9 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
+    # 分片上传大小限制
+    client_max_body_size 100m;
+
     index index.html index.htm index.php;
 
     charset utf-8;
