chore: 目录[配置]变更

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,18 @@
-TZ=Asia/Shanghai
+ENV=local
+
+TIMEZONE=Asia/Shanghai
 
 # [image]
 NGINX=nginx:1.23.3-alpine
 MYSQL=mysql:8.0.32
 REDIS=redis:7.0.9-alpine
-PHP=xgbnl/php:8.2.3-fpm
+PHP=xgbnl/php:8.2.5-fpm
 
 # [mysql]
-MYSQL_ROOT_PASSWORD=root_password
+MYSQL_ROOT_PASSWORD=password
 MYSQL_DATABASE=laravel
 MYSQL_USER=guest
-MYSQL_PASSWORD=bcrypt
+MYSQL_PASSWORD=password
 DEFAULT_AUTHENTICATION_PLUGIN=mysql_native_password
 CHARACTER_SET_SERVER=utf8mb4
 COLLATION_SERVER=utf8mb4_general_ci
@@ -18,10 +20,11 @@ EXPLICIT_DEFAULTS_FOR_TIMESTAMP=off
 DEFAULT_STORAGE_ENGINE=INNODB
 SQL_MODE='STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION'
 
-
 # [path]
 APP=./app
 CONTAINER=/var/www/html
+
+SUPERVISOR=./supervisor
 
 #[config]
 CONFIG=./config
