--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ NGINX=nginx:1.25.0-alpine
 MYSQL=mysql:8.0.33
 REDIS=redis:7.0.11-alpine
 PHP=xgbnl/php:8.2.7-fpm
+COMPOSER=composer:2.5.7
 
 # [mysql]
 MYSQL_ROOT_PASSWORD=password
@@ -24,6 +25,8 @@ SQL_MODE='STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY
 APP=./app
 CONTAINER=/var/www/html
 
+COMPOSER_ROOT=./composer
+
 #[config]
 CONFIG=./config
 
@@ -31,7 +34,7 @@ CONFIG=./config
 DATABASE=./database
 
 #[storage]
-STORAGE=./storage 
+STORAGE=./storage
 
 #[permission]
 UID=1000
