chore: 优化组织结构

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ NGINX=nginx:1.25.0-alpine
 MYSQL=mysql:8.0.33
 REDIS=redis:7.0.11-alpine
 PHP=xgbnl/php:8.2.7-fpm
-COMPOSER=composer:2.5.7
+QUEUE=xgbnl/queue:8.2.7-fpm
 
 # [mysql]
 MYSQL_ROOT_PASSWORD=password
@@ -24,8 +24,6 @@ SQL_MODE='STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY
 # [path]
 APP=./app
 CONTAINER=/var/www/html
-
-COMPOSER_ROOT=./composer
 
 #[config]
 CONFIG=./config
