--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,21 +33,18 @@ services:
       - nginx
     networks:
       - web
-
-  composer:
-    image: ${COMPOSER}
-    container_name: composer
-    environment:
-      - COMPOSER_CACHE_DIR=/tmp/cache
-      - COMPOSER_MEMORY_LIMIT=-1
-      - COMPOSER_ALLOW_SUPERUSER=1
-      - COMPOSER_HOME=/tmp/composer
+      
+  queue:
+    image: ${PHP}
+    restart: unless-stopped
+    container_name: ${QUEUE}
+    user: ${UID}:${GID}
     volumes:
-      - ${APP}:/app:rw
-      - ${COMPOSER_ROOT}/cache:/tmp/cache
-      - ${COMPOSER_ROOT}/home:/tmp/composer
-    working_dir: /app
-    command: tail -f /dev/null
+      - ${APP}:${CONTAINER}:rw
+      - ${CONFIG}/php/docker-upload.ini:/usr/local/etc/php/conf.d/docker-upload.ini:ro
+      - ${CONFIG}/php/www.conf:/usr/local/etc/php-fpm.d/www.conf:ro
+    depends_on:
+      - nginx
     networks:
       - web
 
