--- a/.env
+++ b/.env
@@ -3,15 +3,15 @@ ENV=local
 TIMEZONE=Asia/Shanghai
 
 # [image]
-NGINX=nginx:1.25.2-alpine
-MYSQL=mysql:8.1.0
-REDIS=redis:7.2.0-alpine
-PHP=xgbnl/php:8.3.0-fpm
+NGINX=nginx:1.25.4-alpine
+MYSQL=mysql:8.3.0
+REDIS=redis:7.2.4-alpine
+PHP=xgbnl/php:8.3.4-fpm
 
 # [mysql]
 MYSQL_ROOT_PASSWORD=password
 MYSQL_DATABASE=laravel
-MYSQL_USER=guest
+MYSQL_USER=laravel
 MYSQL_PASSWORD=password
 DEFAULT_AUTHENTICATION_PLUGIN=mysql_native_password
 CHARACTER_SET_SERVER=utf8mb4
